Fix logo spacing on buddy list

--- a/app/assets/stylesheets/chat/buddy_list.scss
+++ b/app/assets/stylesheets/chat/buddy_list.scss
@@ -71,7 +71,6 @@
 
 .square-title-logo-small {
   padding: 5px;
-  margin-bottom: $content-spacing;
 
   display: flex;
   flex-flow: row;
